# QUARCS_QT-SeverProgram

./: .env.example  .gitignore  CMakeLists.txt  LICENSE.md  README.md  README_CROSS_RPI.md  README_GUIDING_TEST.md  SECURITY.md  Untitled  VUE端自动对焦拟合算法改进说明.md  autofocus_patch.diff  build.sh  build_and_deploy_rpi.sh  kstars-x11.sh  qhyccd.ini  test_outlier_detection.py  toolchain-rpi-arm64.cmake  vue_test_data.json
--gtest_color=no/: calib_0.fits  calib_1.fits  calib_10.fits  calib_11.fits  calib_2.fits  calib_3.fits  calib_4.fits  calib_5.fits  calib_6.fits  calib_7.fits  calib_8.fits  calib_9.fits  emg_0.fits  emg_1.fits  emg_10.fits  emg_100.fits  emg_101.fits  emg_102.fits  emg_103.fits  emg_104.fits  emg_105.fits  emg_106.fits  emg_107.fits  emg_108.fits  emg_109.fits  emg_11.fits  emg_110.fits  emg_111.fits  emg_112.fits  emg_113.fits  emg_114.fits  emg_115.fits  emg_116.fits  emg_117.fits  emg_118.fits  emg_119.fits  emg_12.fits  emg_120.fits  emg_121.fits  emg_122.fits  (+173 more)
cmake/: FindStellarSolver.cmake  compiler_options.cmake
deploy/rpi/: QUARCS_树莓派AP-WAN-ZeroTier_实现笔记_手把手.md  README.md  deploy_build_to_pi.sh  net-mode.conf  net-mode.sh  pi_enable_remote_control.sh
deploy/rpi/sudoers.d/: quarcs-net
deploy/rpi/systemd/: quarcs-qt-server.service
doc/: 2026-04-07_开发环境与交叉编译部署总结.md  2026-04-12_对焦模式Z2瓦片只显示部分问题排查.md  2026-04-14_QfdNative星点识别与HFR迁移总结.md  2026-04-28_极轴引导锁星算法V2设计与参数说明.md  2026-04-28_设备绑定逻辑总结与修改指南.md  2026-05-11_后端日志读取与崩溃排查指南.md  2026-05-13_电子极轴镜模拟校准测试说明.md  2026-06-25_导星星点侦测调试阶段总结.md  2026-06-29_MainWindow拆分阶段总结.md  2026-06-30_MainWindow拆分总体总结与后续建议.md  2026-07-01_INDI版本现状对比与升级工作入口.md  2026-07-01_QHYCCD_DEMO相机添加工作完整说明.md  2026-07-01_Qt服务端编译告警处理与交叉编译验证总结.md  2026-07-06_平场法星点检测基础化拆分与实施方案.md  2026-07-07_QHY_SDK多相机分配状态机与倾向分类设计.md  2026-07-16_相机传输抽象设计_INDI_SDK统一.md  2026-07-17_多客户端广播串扰_根因与方案.md  README_CROSS_RPI.md  README_GUIDING_TEST.md  README_QHYCCD_DEMO_CAMERA.md  README_SDK_DEPLOY.md  apsta-setup.sh  polemaster-auto-polar-alignment-flow.md  内置导星功能逻辑总结_对比PHD2.md  树梅派设置AP+STA并区分有线和无线.md
docker/bookworm-cross/: Dockerfile
scripts/: gen_starfield.py
src/: 2.py  CMakeLists.txt  Logger.cpp  Logger.h  SerialDeviceDetector.cpp  SerialDeviceDetector.h  autofocus.cpp  autofocus.h  autopolaralignment.cpp  autopolaralignment.h  calculatestars.py  camera_transports.cpp  camera_transports.h  create_test_image.py  device_allocation.cpp  device_allocation.h  findstars.py  flatfield_detect.py  focused_star_detection.cpp  icamera.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_autofocus.cpp  mainwindow_command_support.h  mainwindow_commands_capture.cpp  mainwindow_commands_control.cpp  mainwindow_commands_device.cpp  mainwindow_device_config.cpp  mainwindow_device_connection.cpp  mainwindow_external_phd2.cpp  mainwindow_focus_loop.cpp  mainwindow_focuser.cpp  mainwindow_gpio.cpp  mainwindow_guiding.cpp  mainwindow_guiding_runtime.cpp  mainwindow_image_pipeline.cpp  mainwindow_indi.cpp  mainwindow_main_camera_capture.cpp  mainwindow_mount_control.cpp  (+30 more)
src/guiding/: CentroidUtils.cpp  CentroidUtils.h  DecBacklashEstimator.cpp  DecBacklashEstimator.h  GuiderCore.cpp  GuiderCore.h  GuiderTypes.h  GuidingStarDetector.cpp  GuidingStarDetector.h  MultiStarTracker.cpp  MultiStarTracker.h  SimGuiderFrameSource.cpp  SimGuiderFrameSource.h
src/guiding/flatfield/: FlatFieldDetector.cpp  FlatFieldDetector.h
src/guiding/phd2/: Phd2GuideAlgorithms.h  Phd2MountCalibration.cpp  Phd2MountCalibration.h  Phd2MountGuiding.cpp  Phd2MountGuiding.h
src/polemaster_simulation/: polemaster_simulate_frame.py  render_sky_patch  render_sky_patch.cpp
src/sdks/: LoggerAdapter.h  SdkCommon.h  SdkDevice.cpp  SdkDevice.h  SdkDriver.h  SdkDriverRegistry.cpp  SdkDriverRegistry.h  SdkManager.cpp  SdkManager.h  SdkSerialExecutor.cpp  SdkSerialExecutor.h
src/sdks/QHYCCD/: QHYCCD.cpp  QHYCCD.h  QHYFocuser.cpp  QHYFocuser.h
src/star_detect/: FlatFieldStarDetector.cpp  FlatFieldStarDetector.h  StarDetectParams.h  StarTypes.h
src/tests/: alloc_test.cpp  flatfield_batch_test.cpp  flatfield_batch_test.py  guiding_batch_analyzer.cpp  guiding_offline_test.cpp  indi_qhy_smoke_test.sh  run_alloc_test.sh
src/tests/ws/: README.md  order_coverage.js  order_coverage_edge.js  order_coverage_sdk.js  verify_connectall_silent.js  verify_m2_lazy_open.js  verify_mixed.js  verify_single_device.js  ws_cmd.js
tools/: analyze_guider_batch.py  run_simplexy_batch.py
